sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2: error: ambiguous reference to overloaded definition,
both method cocktailSort2 in class AlgCocktailSort2 of type ()Unit
and  method cocktailSort2 in class AlgCocktailSort2 of type ()Unit
match argument types ()
		cocktailSort2();
                ^AlgCocktailSort2:31: error: method cocktailSort2 is defined twice
  conflicting symbols both originated in file 'plm.runtime1.AlgCocktailSort2'
def cocktailSort2() {
    ^